<resources>
    <string name="app_name">AlphabetsApp</string>
    <string name="start">START</string>
    <string name="todo">TODO</string>
    <string name="aFor">Apple</string>
    <string name="Apple">apple</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="h">H</string>
</resources>